ledger: JVM segfaults on Microsoft JDK 21.0.7; align Rain with Open-Air's ZGC args
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>